# crypto-standard

./: .gitignore  .golangci.yml  3des.go  CHANGELOG.md  README.md  aes.go  go.mod  package-lock.json  package.json  sonar-project.properties  sym_test.go
.githooks/: pre-commit
asym/: bigUtil.go  constant.go  ecdsa.go  ecdsa_test.go  key_test.go  private.go  public.go
asym/secp256k1/: curve.go  secp256.go  secp256_test.go
asym/secp256k1/internal/: csprng.go  ecdsa_impl.h  gen_context.c  group.h  main_impl.h  num.h  secp256k1.c  secp256k1.go  secp256k1.h  (+3 more)
ecc/: ecc.go  ecc_test.go
ed25519/: agg.go  agg_example_test.go  agg_sign.go  agg_test.go  agg_verify.go  batch_step.go  batch_step_test.go  batch_verify_32bit.go  benchmark_test.go  curve_test.go  ed25519.go  ed25519_32bit.go  ed25519_64bit.go  ed25519_test.go
ed25519/asm/: Transfer.go
ed25519/curve25519/: curve25519_donna_32bit.go  helpers.go
ed25519/ge25519/: basepoint_table.go  ge25519.go  movecond_unsafe.go  tables_32bit.go
ed25519/internal/: CMakeLists.txt  batch_step.go  batch_step_test.go  bigNum.go  curve25519-donna-64bit.h  ed25519-donna-batchverify.h  ed25519-donna-impl-base.h  ed25519-donna-portable-identify.h  ed25519-donna.h  ed25519-hash.h  ed25519-randombytes.h  ed25519.c  ed25519.h  heap.h  internal.go  modm-donna-64bit.h  rand.h  regression.h  sha.h  test-internals.c  test.c
ed25519/modm/: modm_32bit.go
hash/: constant.go  fake_hash.go  hash.go  hash_test.go  hashbenchmark_test.go
hash/sha3/: hash_test.go  hashes.go  keccakf.go  sha3.go  xor_unaligned.go
scripts/: fmt.sh
